--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -30,7 +30,7 @@
             </div>
         </header>
         <br>
-        <!-- Main -->
+        <!-- Main Section-->
         <main>Main content
             <h1>Homepage</h1>
             <br>
