--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -60,7 +60,7 @@
                 </div>
             </section>
             <br>
-            <!-- Works section -->
+            <!-- Works Section -->
             <section>
                 <div>
                     <header>
@@ -81,7 +81,7 @@
                 </div>
             </section>
             <br>
-            <!-- About Us section -->
+            <!-- About Us Section -->
             <section>
                 <div>
                     <header>
@@ -100,7 +100,7 @@
                 </div>
             </section>
             <br>
-            <!-- Latest news section -->
+            <!-- Latest news Section -->
             <section>
                 <div>
                     <header>
@@ -126,7 +126,7 @@
                 </div>
             </section>
             <br>
-            <!-- Testimonials section -->
+            <!-- Testimonials Section -->
             <section>
                 <div>
                     <header>
