--- a/0x00-html_advanced/25-index.html
+++ b/0x00-html_advanced/25-index.html
@@ -30,9 +30,9 @@
                     </ul>
                 </nav>
             </div>
-        </header>
+        </header> 
         <br>
-        <!-- Main -->
+        <!-- Main Section-->
         <main>Main content
             <h1>Homepage</h1>
             <br>
