--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -34,7 +34,7 @@
                 </div>
             </section>
             <br>
-            <!-- Services section -->
+            <!-- Service section -->
             <section>
                 <div>
                     <header>
@@ -52,7 +52,7 @@
                 </div>
             </section>
             <br>
-            <!-- Works section -->
+            <!-- Work section -->
             <section>
                 <div>
                     <header>
@@ -73,7 +73,7 @@
                 </div>
             </section>
             <br>
-            <!-- About Us section -->
+            <!-- About section -->
             <section>
                 <div>
                     <header>
