--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -52,7 +52,7 @@
                 </div>
             </section>
             <br>
-            <!-- Works section -->
+            <!-- Works Section -->
             <section>
                 <div>
                     <header>
@@ -73,7 +73,7 @@
                 </div>
             </section>
             <br>
-            <!-- About Us section -->
+            <!-- About Us Section -->
             <section>
                 <div>
                     <header>
@@ -91,7 +91,7 @@
                 </div>
             </section>
             <br>
-            <!-- Latest news section -->
+            <!-- Latest news Section -->
             <section>
                 <div>
                     <header>
@@ -117,7 +117,7 @@
                 </div>
             </section>
             <br>
-            <!-- Testimonials section -->
+            <!-- Testimonials Section -->
             <section>
                 <div>
                     <header>
@@ -132,7 +132,7 @@
                 </div>
             </section>
             <br>
-            <!-- Contact section -->
+            <!-- Contact Section -->
             <section>
                 <div>
                     <header>
