--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -83,7 +83,7 @@
                 </div>
             </section>
             <br>
-            <!-- About Us section -->
+            <!-- About Us Section -->
             <section>
                 <div>
                     <header>
@@ -102,7 +102,7 @@
                 </div>
             </section>
             <br>
-            <!-- Latest news section -->
+            <!-- Latest news Section -->
             <section>
                 <div>
                     <header>
@@ -128,7 +128,7 @@
                 </div>
             </section>
             <br>
-            <!-- Testimonials section -->
+            <!-- Testimonials Section -->
             <section>
                 <div>
                     <header>
@@ -158,7 +158,7 @@
                 </div>
             </section>
             <br>
-            <!-- Contact section -->
+            <!-- Contact Section -->
             <section>
                 <div>
                     <header>
