--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -62,7 +62,7 @@
                 </div>
             </section>
             <br>
-            <!-- Works section -->
+            <!-- Works Section -->
             <section>
                 <div>
                     <header>
@@ -83,7 +83,7 @@
                 </div>
             </section>
             <br>
-            <!-- About Us section -->
+            <!-- About Us Section -->
             <section>
                 <div>
                     <header>
@@ -102,7 +102,7 @@
                 </div>
             </section>
             <br>
-            <!-- Latest news section -->
+            <!-- Latest news Section -->
             <section>
                 <div>
                     <header>
@@ -131,7 +131,7 @@
                 </div>
             </section>
             <br>
-            <!-- Testimonials section -->
+            <!-- Testimonials Section -->
             <section>
                 <div>
                     <header>
@@ -152,7 +152,7 @@
                 </div>
             </section>
             <br>
-            <!-- Contact section -->
+            <!-- Contact Section -->
             <section>
                 <div>
                     <header>
