--- a/0x03-responsive_design/03-index.html
+++ b/0x03-responsive_design/03-index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- Header -->
-    
+    git 
     <header class="header" data-section-theme="dark">
       <div class="container">
             <div class="header-container">
